--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
              <h1>To-Do list <img src="images/7692809.png" alt=""> </h1>
              <div class="row">
                 <input type="text" id="input-text" placeholder="Add your text">
-                <button onclick="Addtask()">Add</button>
+                <button id="add-btn" onclick="Addtask()">Add</button>
              </div>
              <ul id="list-container">
                 <!-- <li class="checked">task 1</li>
